# robot_llm

./: .gitignore  CLAUDE.md  README.md  Robot Action Orchestrator_SRS.docx  config.env  config.env.example  pyproject.toml  requirements.txt  run.py  run_server.py  test_client.html  test_panel.html
.claude/: settings.local.json
docs/: websocket-api.md
src/: __init__.py  action_executor.py  api_server.py  config_loader.py  dialogs.py  execution.py  main.py  main_window.py  models.py  storage.py  widget_components.py  widgets.py  ws_server.py
src/actions/: __init__.py  adp_absorb.py  adp_dispense.py  base_controller.py  drop_gun1.py  drop_gun2.py  go_path.py  go_path_robot2.py  grab_pingzi.py  gripper_close.py  gripper_open.py  gui_legacy.py  move_baseclient.py  movej_robot1.py  movej_robot2.py  pick_gun1.py  pick_gun2.py  record_joint.py  record_path.py  record_path_robot2.py
src/ai_integration/: ai_controller.py  execution_bridge.py
src/arm_sdk/: __init__.py  config.py  controller.py  rm_robot_interface.py
src/cameras/: __init__.py  camera_factory.py  opencv_manager.py  realsense_manager.py
src/core/: __init__.py  config_loader.py  launcher.py  models.py  storage.py
src/devices/: __init__.py  adp.py  kuaihuanshou.py  modbus_motor.py  relay.py  yiyeqiang_out.py
src/gui/: __init__.py  dialogs.py  execution.py  main_window.py
src/llm/: deepseek_client.py  openai_client.py
src/robot_server/: __init__.py  action_executor.py  ask_service.py  camera_manager.py  interceptor.py  minicpm_proxy.py  prompts.py  ws_server.py
src/skill_system/: skill_engine.py
(+45 files in other folders)
